--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <script type="text/javascript" src="bootstrap.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <link rel="stylesheet" type="text/css" href="examples.css" />
+  <link rel="icon" href="logo.png" type="image/x-icon">
 </head>
 <body>
   <ul id="menu">
