se agregan estilos a resultado

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       <div class="container">
         <h1>Algoritmo de euclides</h1>
         <div class="row">
-          <div class="col-md-12">
+          <div class="col-md-12" style="margin-bottom: 25px;">
             <h2>Cálculo de M.C.D. con el algoritmo de Euclides</h2>
           </div>
           <div class="col-md-6">
@@ -56,8 +56,8 @@
             <button type="button" class="btn btn-primary" id="calcularEuclides">Calcular</button>
           </div>
           <div class="col-md-6">
-            <div id="rMcd"></div>
-            <div id="rMcm"></div> 
+            <p id="rMcd"></p>
+            <p id="rMcm"></p> 
           </div>
           
         </div>
